// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Default (Android) Button renders correctly with danger variant 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FF3B30",
      "borderColor": undefined,
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0,
      "elevation": 0,
      "margin": undefined,
      "minWidth": 64,
      "padding": undefined,
      "transform": undefined,
    }
  }
  testID="button-container"
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "borderRadius": 16,
        },
      ]
    }
    testID="button"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "marginLeft": 12,
              "marginRight": -4,
            },
            {
              "marginLeft": 16,
              "marginRight": -16,
            },
            false,
          ]
        }
        testID="button-icon-container"
      />
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                false,
                {
                  "marginHorizontal": 24,
                  "marginVertical": 10,
                },
                undefined,
                false,
                {
                  "color": "#FAFAFA",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "color": "#FAFAFA",
                  },
                  undefined,
                ],
              ],
            ],
          ]
        }
        testID="button-text"
      >
        Secondary Danger Button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Component Default (Android) Button renders correctly with picto 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#000000",
      "borderColor": undefined,
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0,
      "elevation": 0,
      "margin": undefined,
      "minWidth": 64,
      "padding": undefined,
      "transform": undefined,
    }
  }
  testID="button-container"
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "borderRadius": 16,
        },
      ]
    }
    testID="button"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "marginLeft": 12,
              "marginRight": -4,
            },
            {
              "marginLeft": 16,
              "marginRight": -16,
            },
            false,
          ]
        }
        testID="button-icon-container"
      >
        <RNSfsymbols
          iconColor={-328966}
          multicolor={false}
          resizeMode="center"
          size={18}
          style={
            [
              {
                "height": 18,
                "width": 18,
              },
              undefined,
            ]
          }
          systemName="star"
          weight="regular"
        />
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                false,
                {
                  "marginHorizontal": 24,
                  "marginVertical": 10,
                },
                undefined,
                false,
                {
                  "color": "#FAFAFA",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "color": "#FAFAFA",
                  },
                  undefined,
                ],
              ],
            ],
          ]
        }
        testID="button-text"
      >
        Button with Picto
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Component iOS Button renders correctly with primary variant 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#000000",
      "borderRadius": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="button-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#000000",
        "borderColor": undefined,
        "borderRadius": 16,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "minWidth": 64,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="button-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
      testID="button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "marginLeft": 12,
                "marginRight": -4,
              },
              {
                "marginLeft": 16,
                "marginRight": -16,
              },
              false,
            ]
          }
          testID="button-icon-container"
        />
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  false,
                  {
                    "marginHorizontal": 24,
                    "marginVertical": 10,
                  },
                  undefined,
                  false,
                  {
                    "color": "#FAFAFA",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  [
                    {
                      "color": "#FAFAFA",
                    },
                    undefined,
                  ],
                ],
              ],
            ]
          }
          testID="button-text"
        >
          Primary Button
        </Text>
      </View>
    </View>
  </View>
</View>
`;
